@@ -263,8 +263,8 @@ void LyXAction::init()
 		{ LFUN_MATH_IMPORT_SELECTION, "math-import-selection", Noop, Math },
 		{ LFUN_MATH_MATRIX, "math-matrix", Noop, Math },
 		{ LFUN_MATH_MODE, "math-mode", Noop, Math },
-		{ LFUN_MATH_NONUMBER, "math-nonumber", Noop, Math },
-		{ LFUN_MATH_NUMBER, "math-number", Noop, Math },
+		{ LFUN_MATH_NUMBER_LINE_TOGGLE, "math-number-line-toggle", Noop, Math },
+		{ LFUN_MATH_NUMBER_TOGGLE, "math-number-toggle", Noop, Math },
 		{ LFUN_MATH_EXTERN, "math-extern", Noop, Math },
 		{ LFUN_MATH_SIZE, "math-size", Noop, Math },
 		{ LFUN_MATH_MACRO_UNFOLD, "math-macro-unfold", ReadOnly | SingleParUpdate, Math },
